--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">TestTask for XOne</string>
+
+    <string name="title_locations">Локации</string>
+    <string name="streets_edittext_hint">Улицы</string>
 </resources>
